@@ -1,3 +1,7 @@
+2004-09-10  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b177
+
+	* Fix: De-globalize sort_album.php, view_photo_properties.php, extra_fields.php
+
 2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b176
 
 	* Fix: Some popups in Mambo were still displaying inside the UI
@@ -17,13 +21,13 @@
 
 2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b173
 
-	* Fix: do_command.php, album_permissions.php
+	* Fix: De-globalize do_command.php, album_permissions.php
 
 	* Fix: initial admin user was not created in setup, as the password were not global.
 
 2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b172
 
-	* Fix: manage users, create user, edit_field.php, add_photos.php, save_photos.php,
+	* Fix: De-globalize manage users, create user, edit_field.php, add_photos.php, save_photos.php,
 	       add_form.inc
 
 2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b171
